--- a/UnfoldedStudio/resources/ui/progress_dialog.ui
+++ b/UnfoldedStudio/resources/ui/progress_dialog.ui
@@ -6,8 +6,8 @@
             <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>462</width>
-                <height>257</height>
+                <width>500</width>
+                <height>153</height>
             </rect>
         </property>
         <property name="windowTitle">
@@ -25,7 +25,7 @@
                                 </size>
                             </property>
                             <property name="text">
-                                <string>Processing, please wait...</string>
+                                <string>Exporting, please wait...</string>
                             </property>
                             <property name="alignment">
                                 <set>Qt::AlignCenter</set>
@@ -33,9 +33,26 @@
                         </widget>
                     </item>
                     <item>
-                        <layout class="QVBoxLayout" name="pb_vlayout"/>
+                        <widget class="QProgressBar" name="progress_bar">
+                            <property name="value">
+                                <number>24</number>
+                            </property>
+                        </widget>
                     </item>
                 </layout>
+            </item>
+            <item>
+                <spacer name="verticalSpacer">
+                    <property name="orientation">
+                        <enum>Qt::Vertical</enum>
+                    </property>
+                    <property name="sizeHint" stdset="0">
+                        <size>
+                            <width>20</width>
+                            <height>0</height>
+                        </size>
+                    </property>
+                </spacer>
             </item>
             <item>
                 <layout class="QHBoxLayout" name="horizontalLayout">
