--- a/UnfoldedStudio/resources/ui/unfolded_dialog.ui
+++ b/UnfoldedStudio/resources/ui/unfolded_dialog.ui
@@ -364,7 +364,38 @@
                                                 </layout>
                                             </widget>
                                             <widget class="QWidget" name="settings">
-                                                <layout class="QVBoxLayout" name="verticalLayout_15">
+                                                <layout class="QVBoxLayout" name="verticalLayout_13">
+                                                    <item>
+                                                        <widget class="QgsCollapsibleGroupBox" name="mGroupBox_5">
+                                                            <property name="title">
+                                                                <string>General</string>
+                                                            </property>
+                                                            <layout class="QVBoxLayout" name="verticalLayout_12">
+                                                                <item>
+                                                                    <layout class="QGridLayout" name="gridLayout_10">
+                                                                        <item row="0" column="0">
+                                                                            <widget class="QLabel"
+                                                                                    name="label_level_file_3">
+                                                                                <property name="minimumSize">
+                                                                                    <size>
+                                                                                        <width>250</width>
+                                                                                        <height>0</height>
+                                                                                    </size>
+                                                                                </property>
+                                                                                <property name="text">
+                                                                                    <string>Mapbox API Token</string>
+                                                                                </property>
+                                                                            </widget>
+                                                                        </item>
+                                                                        <item row="0" column="1">
+                                                                            <widget class="QLineEdit"
+                                                                                    name="le_mapbox_token"/>
+                                                                        </item>
+                                                                    </layout>
+                                                                </item>
+                                                            </layout>
+                                                        </widget>
+                                                    </item>
                                                     <item>
                                                         <widget class="QgsCollapsibleGroupBox" name="mGroupBox_4">
                                                             <property name="title">
@@ -377,8 +408,7 @@
                                                                             <widget class="QgsFileWidget"
                                                                                     name="f_conf_output">
                                                                                 <property name="storageMode">
-                                                                                    <enum>QgsFileWidget::GetDirectory
-                                                                                    </enum>
+                                                                                    <enum>QgsFileWidget::GetFile</enum>
                                                                                 </property>
                                                                             </widget>
                                                                         </item>
