--- a/UnfoldedStudio/resources/ui/unfolded_dialog.ui
+++ b/UnfoldedStudio/resources/ui/unfolded_dialog.ui
@@ -522,10 +522,7 @@
                      </sizepolicy>
                     </property>
                     <property name="storageMode">
-                     <enum>QgsFileWidget::GetFile</enum>
-                    </property>
-                    <property name="options">
-                     <set>QFileDialog::ShowDirsOnly</set>
+                     <enum>QgsFileWidget::GetDirectory</enum>
                     </property>
                    </widget>
                   </item>
@@ -538,9 +535,7 @@
                      </sizepolicy>
                     </property>
                     <property name="text">
-                     <string>Configuration output
-                      directory
-                     </string>
+                     <string>Configuration output directory                 </string>
                     </property>
                    </widget>
                   </item>
@@ -564,9 +559,7 @@
                 <item>
                  <widget class="QLabel" name="label">
                   <property name="text">
-                   <string>QGIS must be restarted in order to
-                    apply changes in log levels
-                   </string>
+                   <string>QGIS must be restarted in order to apply changes in log levels</string>
                   </property>
                  </widget>
                 </item>
@@ -624,8 +617,7 @@
                   <item>
                    <widget class="QPushButton" name="btn_open_log">
                     <property name="text">
-                     <string>Open most recent log file
-                     </string>
+                     <string>Open most recent log file</string>
                     </property>
                    </widget>
                   </item>
@@ -748,8 +740,7 @@
                      </sizepolicy>
                     </property>
                     <property name="text">
-                     <string>Main plugin development
-                     </string>
+                     <string>Main plugin development</string>
                     </property>
                    </widget>
                   </item>
@@ -816,9 +807,7 @@
                      </sizepolicy>
                     </property>
                     <property name="text">
-                     <string>Unfolded Studio Plugin
-                      repository
-                     </string>
+                     <string>Unfolded Studio Plugin repository</string>
                     </property>
                    </widget>
                   </item>
@@ -893,8 +882,7 @@
                      </sizepolicy>
                     </property>
                     <property name="text">
-                     <string>Unfolded Studio Plugin
-                     </string>
+                     <string>Unfolded Studio Plugin</string>
                     </property>
                    </widget>
                   </item>
@@ -926,8 +914,7 @@
                      </sizepolicy>
                     </property>
                     <property name="text">
-                     <string>Unfolded Studio Plugin
-                     </string>
+                     <string>Unfolded Studio Plugin</string>
                     </property>
                    </widget>
                   </item>
