#27: Add refresh button to UI

--- a/UnfoldedStudio/resources/ui/unfolded_dialog.ui
+++ b/UnfoldedStudio/resources/ui/unfolded_dialog.ui
@@ -112,8 +112,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>767</width>
-          <height>744</height>
+          <width>781</width>
+          <height>726</height>
          </rect>
         </property>
         <property name="minimumSize">
@@ -131,11 +131,53 @@
            <widget class="QWidget" name="exporter">
             <layout class="QVBoxLayout" name="verticalLayout_11">
              <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_5">
+               <item>
+                <spacer name="horizontalSpacer_3">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item>
+                <widget class="QPushButton" name="btn_refresh">
+                 <property name="maximumSize">
+                  <size>
+                   <width>25</width>
+                   <height>25</height>
+                  </size>
+                 </property>
+                 <property name="toolTip">
+                  <string>Load Snapshot configuration from project...</string>
+                 </property>
+                 <property name="text">
+                  <string/>
+                 </property>
+                 <property name="flat">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
               <widget class="QGroupBox" name="groupBox_6">
+               <property name="font">
+                <font>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
                <property name="title">
                 <string>Layers to export</string>
                </property>
-               <layout class="QVBoxLayout" name="verticalLayout_2">
+               <layout class="QVBoxLayout" name="verticalLayout_13">
                 <item>
                  <widget class="QTableWidget" name="tw_layers">
                   <property name="minimumSize">
@@ -218,28 +260,6 @@
                 <bool>true</bool>
                </property>
                <layout class="QGridLayout" name="gridLayout_8">
-                <item row="3" column="2">
-                 <widget class="QTextEdit" name="input_description"/>
-                </item>
-                <item row="2" column="0">
-                 <widget class="QLabel" name="label_20">
-                  <property name="sizePolicy">
-                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                   </sizepolicy>
-                  </property>
-                  <property name="font">
-                   <font>
-                    <weight>75</weight>
-                    <bold>true</bold>
-                   </font>
-                  </property>
-                  <property name="text">
-                   <string>Title</string>
-                  </property>
-                 </widget>
-                </item>
                 <item row="3" column="0">
                  <widget class="QLabel" name="label_14">
                   <property name="sizePolicy">
@@ -261,6 +281,28 @@
                 </item>
                 <item row="2" column="2">
                  <widget class="QLineEdit" name="input_title"/>
+                </item>
+                <item row="2" column="0">
+                 <widget class="QLabel" name="label_20">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <weight>75</weight>
+                    <bold>true</bold>
+                   </font>
+                  </property>
+                  <property name="text">
+                   <string>Title</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="2">
+                 <widget class="QTextEdit" name="input_description"/>
                 </item>
                </layout>
               </widget>
@@ -341,10 +383,10 @@
                 <string>Map interaction</string>
                </property>
                <property name="flat">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="collapsed">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="scrollOnExpand">
                 <bool>true</bool>
@@ -402,10 +444,10 @@
                 <string>Visualization state</string>
                </property>
                <property name="flat">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="collapsed">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="scrollOnExpand">
                 <bool>true</bool>
