--- a/UnfoldedMapExporter/resources/ui/unfolded_dialog.ui
+++ b/UnfoldedMapExporter/resources/ui/unfolded_dialog.ui
@@ -126,7 +126,7 @@
          <item>
           <widget class="QStackedWidget" name="stacked_widget">
            <property name="currentIndex">
-            <number>0</number>
+            <number>1</number>
            </property>
            <widget class="QWidget" name="exporter">
             <layout class="QVBoxLayout" name="verticalLayout_11">
@@ -596,19 +596,50 @@
                     </property>
                    </widget>
                   </item>
-                  <item row="0" column="1">
-                   <widget class="QgsFileWidget" name="f_conf_output">
-                    <property name="sizePolicy">
-                     <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                      <horstretch>0</horstretch>
-                      <verstretch>0</verstretch>
-                     </sizepolicy>
-                    </property>
-                    <property name="storageMode">
-                     <enum>QgsFileWidget::GetDirectory</enum>
-                    </property>
-                   </widget>
-                  </item>
+                     <item row="0" column="1">
+                         <widget class="QgsFileWidget" name="f_conf_output">
+                             <property name="sizePolicy">
+                                 <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                                     <horstretch>0</horstretch>
+                                     <verstretch>0</verstretch>
+                                 </sizepolicy>
+                             </property>
+                             <property name="storageMode">
+                                 <enum>QgsFileWidget::GetDirectory</enum>
+                             </property>
+                         </widget>
+                     </item>
+                     <item row="1" column="1">
+                         <layout class="QVBoxLayout" name="verticalLayout_2">
+                             <item>
+                                 <widget class="QRadioButton" name="rb_format_zip">
+                                     <property name="toolTip">
+                                         <string>Compatible with Unfolded Studio</string>
+                                     </property>
+                                     <property name="text">
+                                         <string>ZIP</string>
+                                     </property>
+                                 </widget>
+                             </item>
+                             <item>
+                                 <widget class="QRadioButton" name="rb_format_json">
+                                     <property name="toolTip">
+                                         <string>Combatible with Unfolded Studio and kepler.gl</string>
+                                     </property>
+                                     <property name="text">
+                                         <string>JSON</string>
+                                     </property>
+                                 </widget>
+                             </item>
+                         </layout>
+                     </item>
+                     <item row="1" column="0">
+                         <widget class="QLabel" name="label_2">
+                             <property name="text">
+                                 <string>Output file format</string>
+                             </property>
+                         </widget>
+                     </item>
                  </layout>
                 </item>
                </layout>
